# karaparty_discord_bot

./: .gitignore  MANIFEST.in  README.md  config.yaml.template  discord_queue api.py  discord_queue.py  discord_queue_api.py  dispatched_songs.json  environment.yml  kai_api.py  kai_request.py  main.py  played_song.json  playlist_player.py  requirements.txt  setup.cfg  setup.py  start_karaparty.sh  stop_karaparty.sh
bot/: core.py  events.py
cogs/: events.py  message_guard.py  music_dispatcher copy.py  music_dispatcher.py  presentation_manager.py
notebooks/: bot_dj.ipynb
services/: link_manager.py  queue_manager.py  smartbot_service.py  youtube_service.py
services/queue/: helpers.py  queue_buffer.py  queue_manager.py
tests/: buffer_test.py
utils/: error_reporter.py  helpers.py  logger.py  playlist_player.py  validators.py  warning_reporter.py
visual/: visual.py
