[metadata]
name = karaparty_bot
version = 0.1.0
description = A Discord bot to manage YouTube links in Discord channels
author = Your Name
license = MIT
platforms = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    discord.py
    pyyaml
    python-dotenv

[options.entry_points]
console_scripts =
    karaparty_bot = main:main
